# SentiPulse

./: .gitignore  README.md  Untitled  data_usage.md  pyproject.toml  requirements.txt  run.py
application/: README.md
application/backend/: README.md  app.py
application/frontend/: README.md
data/: build_db.py  test-00000-of-00001.parquet  train-00000-of-00001.parquet
data/processed/: CSMD_cleaned.csv  csmd_news.json
data/stock/: stock_daily.csv
data_clean/: README.md  main.py  news_eastmoney.csv  news_stcn.csv  pyproject.toml  repair_bad_news_summaries.py  run_clean_and_analyze.py
data_clean/output/: data_analysis_report.md  stock_daily_cleaned.csv
data_crawler/: .gitignore  README.md  __init__.py  config.py  database.py  logger.py  main.py  pyproject.toml
data_crawler/news/: cninfo_content_fetcher.py  cninfo_crawler.py  eastmoney_crawler.py
data_crawler/news/stcn_scripts/: stcn_crawler.py  stcn_playwright_crawler.py
data_crawler/stock/: stock_crawler.py
docs/: summary.md  team_contribution_statement.md  项目流程与原理说明.md
docs/poster/: index.html  package-lock.json  package.json  vite.config.ts
outputs/bert-financial-sentiment/: eval_metrics.json  hyperparameters.json  test_metrics.json  training_loss.json
outputs/bert-untuned-baseline/: test_metrics.json  val_metrics.json
scripts/: build_sentiment_both.py  import_sentipulse_data.py  run_year_roll_experiment.py  train.bat  train.sh  train_bert_financial_sentiment.py
src/: eval_untuned_baseline.py  train_bert_financial_sentiment.py
theory/: README.md  __init__.py
theory/shared/: __init__.py  (+2 more)
(+4354 files in other folders)
