[project]
name = "sentipulse"
version = "0.1.0"
description = "Fine-tune BERT for Chinese financial sentiment classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "transformers>=4.41.0",
]

[tool.uv]
package = false
